--- a/app/scss/_forms.scss
+++ b/app/scss/_forms.scss
@@ -29,6 +29,7 @@
     background-color: rgba($accentColor, .1);
     border-color: rgba($accentColor, .5);
     box-shadow: 0 0 0 .2rem rgba($accentColor, .25);
+    color: black;
   }
   @media screen and (max-width: 991px) {
     line-height: 2rem;
